--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <h3>Temperature</h3>
             <div>
               <div>
-                <img src="/Images/Icons/temp_high.svg" alt="" />
+                <img src="Images/Icons/temp_high.svg" alt="" />
                 <p class="high-temp"></p>
               </div>
               <div>
-                <img src="/Images/Icons/temp_low.svg" alt="" />
+                <img src="Images/Icons/temp_low.svg" alt="" />
                 <p class="low-temp"></p>
               </div>
             </div>
