--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="highlow-temp">
             <h3>Temperature</h3>
             <div>
-              <div>
+              <div class="hightemp">
                 <img src="Images/Icons/temp_high.svg" alt="" />
                 <p class="high-temp"></p>
               </div>
