--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
 			rel="stylesheet"
 		/>
+		 <link rel="icon" href="/Images/weather icons/cloudy-day.svg">
 	</head>
 	<body>
 		<div id="container">
